--- a/ElasticsearchFormation/cloudformation.template
+++ b/ElasticsearchFormation/cloudformation.template
@@ -70,8 +70,7 @@
     },
 
     "AWSRegionArch2AMI" : {
-      "eu-west-1"      : { "64" : "ami-17031f63" },
-	  "us-east-1"	   : { "64" : "ami-d480fcbd" }
+      "eu-west-1"      : { "64" : "ami-17031f63" }
     }
   },
 
